--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,13 +2,13 @@
 edition = "2021"
 name = "git-branch-deleter"
 version = "0.1.0"
-description = "Delete local git branches comfortably via a TUI"
+description = "Delete local git branches comfortably with a minimalistic TUI"
 homepage = "https://github.com/Enselic/git-branch-deleter"
 documentation = "https://docs.rs/git-branch-deleter"
 readme = "README.md"
 categories = ["command-line-utilities", "development-tools"]
 license = "MIT"
-repository = "https://github.com/Enselic/cargo-public-api"
+repository = "https://github.com/Enselic/git-branch-deleter"
 
 [dependencies]
 termion = "2.0.1"
