--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -15,6 +15,8 @@ jobs:
     environment:
       name: crates.io
       url: https://crates.io/crates/git-branch-deleter
+    permissions:
+      contents: write # git push
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
