--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -47,6 +47,7 @@ jobs:
     permissions:
       contents: write # So we can create a release.
     steps:
+      - uses: actions/checkout@v3
       - run: cargo install parse-changelog@0.6.4 --locked
       - name: create release
         run: |
