--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -1,5 +1,11 @@
 name: Release
 
+# To make a release:
+#
+# 1. Update Cargo.toml version and CHANGELOG.md on main
+# 2. Run workflow https://github.com/git-branch-deleter/git-branch-deleter/actions/workflows/Release.yml on main
+# 3. Done!
+
 on:
   workflow_dispatch: # This workflow can only be triggered manually.
 
@@ -50,6 +56,8 @@ jobs:
       - uses: actions/checkout@v3
       - run: cargo install parse-changelog@0.6.4 --locked
       - name: create release
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
           notes="$(parse-changelog CHANGELOG.md ${{ needs.publish-and-tag.outputs.VERSION }})"
           title="${{ needs.publish-and-tag.outputs.TAG_NAME }}"
