--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,6 +3,7 @@ name: CI
 on:
   workflow_call: # From .github/workflows/Release.yml
   workflow_dispatch:
+  merge_group:
   pull_request:
   push:
     branches: [main]
