Remove help so more branches fits on screen

--- a/deny.toml
+++ b/deny.toml
@@ -1,11 +1,8 @@
 [licenses]
+version = 2
 allow = [
     "MIT",
 ]
-
-unlicensed = "deny"
-copyleft = "deny"
-default = "deny"
 
 [bans]
 wildcards = "deny"
